NCL-9481 - Change test properties